fixed name alignment issue

--- a/ACM_General/home/static/home/scss/officers.scss
+++ b/ACM_General/home/static/home/scss/officers.scss
@@ -58,7 +58,6 @@
 
 .card__name {
   display: block;
-  margin: auto;
 }
 .card__titles {
   margin: 0;
